# doubao-voice

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run.spec
ai_opt/: __init__.py  optimizer.py
executor/: __init__.py  executor.py  requirements.txt
main/: __init__.py  config.py  relay.py
script/: doubao-collector.user.js
test/executor/: __init__.py  test_paste_executor.py
test/main/: __init__.py  test_config.py  test_push_and_history.py
test/script/: README.md  __init__.py
web/: app.js  index.html  style.css
